--- a/src/EFCore/MultiTenancyServer.EntityFrameworkCore.csproj
+++ b/src/EFCore/MultiTenancyServer.EntityFrameworkCore.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>0.7.1</Version>
+    <Version>0.7.5</Version>
     <Authors>Kris Penner</Authors>
     <Product>MultiTenancyServer</Product>
     <Description>MultiTenancyServer Entity Framework Core library.</Description>
@@ -15,11 +15,12 @@
     <PackageTags>multitenancy multi-tenancy multitenant multi-tenant tenants company client customer division partition entityframeworkcore entityframework core ef efcore</PackageTags>
     <NeutralLanguage>en-US</NeutralLanguage>
     <LangVersion>latest</LangVersion>
+    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="2.0.0" />
-    <PackageReference Include="MultiTenancyServer.Stores" Version="0.7.1" />
+    <PackageReference Include="MultiTenancyServer.Stores" Version="0.7.5" />
   </ItemGroup>
 
 </Project>
