--- a/src/EFCore/MultiTenancyServer.EntityFrameworkCore.csproj
+++ b/src/EFCore/MultiTenancyServer.EntityFrameworkCore.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>0.7.5</Version>
+    <Version>0.7.6</Version>
     <Authors>Kris Penner</Authors>
     <Product>MultiTenancyServer</Product>
     <Description>MultiTenancyServer Entity Framework Core library.</Description>
@@ -20,7 +20,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="2.0.0" />
-    <PackageReference Include="MultiTenancyServer.Stores" Version="0.7.5" />
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-beta-62909-01" />
+    <PackageReference Include="MultiTenancyServer.Stores" Version="0.7.6" />
   </ItemGroup>
 
 </Project>
