--- a/src/EFCore/MultiTenancyServer.EntityFrameworkCore.csproj
+++ b/src/EFCore/MultiTenancyServer.EntityFrameworkCore.csproj
@@ -1,27 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>0.7.6</Version>
-    <Authors>Kris Penner</Authors>
-    <Product>MultiTenancyServer</Product>
-    <Description>MultiTenancyServer Entity Framework Core library.</Description>
-    <Copyright>Copyright © Kris Penner</Copyright>
-    <PackageLicenseUrl>https://raw.githubusercontent.com/MultiTenancyServer/MultiTenancyServer.EntityFrameworkCore/master/LICENSE</PackageLicenseUrl>
-    <PackageProjectUrl>https://github.com/MultiTenancyServer</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/MultiTenancyServer/MultiTenancyServer.EntityFrameworkCore</RepositoryUrl>
-    <RepositoryType>git</RepositoryType>
-    <PackageIconUrl>https://avatars3.githubusercontent.com/u/38764835</PackageIconUrl>
-    <PackageTags>multitenancy multi-tenancy multitenant multi-tenant tenants company client customer division partition entityframeworkcore entityframework core ef efcore</PackageTags>
-    <NeutralLanguage>en-US</NeutralLanguage>
-    <LangVersion>latest</LangVersion>
-    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>netstandard2.0</TargetFramework>
+		<Version>0.8.0</Version>
+		<Description>MultiTenancyServer Entity Framework Core library.</Description>
+		<PackageTags>multitenancy multi-tenancy multitenant multi-tenant tenants tenant company client customer division partition entityframeworkcore entityframework core ef efcore</PackageTags>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="2.0.0" />
-    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-beta-62909-01" />
-    <PackageReference Include="MultiTenancyServer.Stores" Version="0.7.6" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="2.0.0" />
+		<PackageReference Include="MultiTenancyServer.Stores" Version="0.8.0" />
+	</ItemGroup>
 
 </Project>
