--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,43 +7,66 @@ trigger:
  - master
  - feature/*
  - fix/*
+stages:
+- stage: Build
+  jobs:
+  - job: Build
+    pool:
+      vmImage: 'ubuntu-latest'
 
-pool:
-  vmImage: 'ubuntu-latest'
+    variables:
+      buildConfiguration: 'Release'
+      PrePackageSuffix: 'pre'
 
-variables:
-  buildConfiguration: 'Release'
-  PrePackageSuffix: 'pre'
+    steps:
+    - script: dotnet build --configuration $(buildConfiguration)
+      displayName: 'dotnet build $(buildConfiguration)'
+    - task: DotNetCoreCLI@2
+      displayName: 'Run tests'
+      inputs:
+        command: 'test'
+        projects: 'tests/**/*.csproj'
+        feedsToUse: 'select'
+        versioningScheme: 'off'
+    - task: DotNetCoreCLI@2
+      condition: succeeded()
+      displayName: 'Pack pre-package'
+      inputs:
+        command: custom
+        projects: '**/*.csproj'
+        custom: 'pack'
+        arguments: '--configuration $(buildConfiguration) --output $(build.artifactStagingDirectory)/pre --version-suffix "$(PrePackageSuffix)-$(Build.BuildNumber)"'
+    - task: DotNetCoreCLI@2
+      condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
+      displayName: 'Pack prod package'
+      inputs:
+        command: 'custom'
+        custom: 'pack'
+        packagesToPack: '**/*.csproj'
+        arguments: '--configuration $(buildConfiguration) --output $(build.artifactStagingDirectory)/prod'
+    - task: PublishBuildArtifacts@1
+      displayName: 'Publish artifacts'
+      inputs:
+        PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+        ArtifactName: 'MultitenancyServer.EntityFrameworkCore'
+        publishLocation: 'Container'
 
-steps:
-- script: dotnet build --configuration $(buildConfiguration)
-  displayName: 'dotnet build $(buildConfiguration)'
-- task: DotNetCoreCLI@2
-  displayName: 'Run tests'
-  inputs:
-    command: 'test'
-    projects: 'tests/**/*.csproj'
-    feedsToUse: 'select'
-    versioningScheme: 'off'
-- task: DotNetCoreCLI@2
-  condition: succeeded()
-  displayName: 'Pack pre-package'
-  inputs:
-    command: custom
-    projects: '**/*.csproj'
-    custom: 'pack'
-    arguments: '--configuration $(buildConfiguration) --output $(build.artifactStagingDirectory)/pre --version-suffix "$(PrePackageSuffix)-$(Build.BuildNumber)"'
-- task: DotNetCoreCLI@2
-  condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
-  displayName: 'Pack prod package'
-  inputs:
-    command: 'custom'
-    custom: 'pack'
-    packagesToPack: '**/*.csproj'
-    arguments: '--configuration $(buildConfiguration) --output $(build.artifactStagingDirectory)/prod'
-- task: PublishBuildArtifacts@1
-  displayName: 'Publish artifacts'
-  inputs:
-    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
-    ArtifactName: 'MultitenancyServer.EntityFrameworkCore'
-    publishLocation: 'Container'
+- stage: Prerelease
+  jobs:
+    # track deployments on the environment
+  - deployment: NugetPush
+    pool:
+      vmImage: 'ubuntu-latest'
+    # creates an environment if it doesn’t exist
+    environment: 'MultitenancyServer.EntityFrameworkCore.Prerelease'
+    strategy:
+      # default deployment strategy
+      runOnce:
+        deploy:
+          steps:
+          - task: DotNetCoreCLI@2
+            inputs:
+              command: 'push'
+              packagesToPush: '$(Build.ArtifactStagingDirectory)/pre/*.nupkg'
+              nuGetFeedType: 'internal'
+              publishVstsFeed: '8ed18c8e-4f19-4994-be32-0a1f0893af0f'
