Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -58,7 +58,7 @@ stages:
     pool:
       vmImage: 'ubuntu-latest'
     # creates an environment if it doesn’t exist
-    environment: 'MultitenancyServer.EntityFrameworkCore.Prerelease'
+    environment: 'Prerelease-MultitenancyServer-EntityFrameworkCore'
     strategy:
       # default deployment strategy
       runOnce:
