--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,12 +44,11 @@ stages:
         custom: 'pack'
         packagesToPack: '**/*.csproj'
         arguments: '--configuration $(buildConfiguration) --output $(build.artifactStagingDirectory)/prod'
-    - task: PublishBuildArtifacts@1
+    - task: PublishPipelineArtifact@1
       displayName: 'Publish artifacts'
       inputs:
-        PathtoPublish: '$(Build.ArtifactStagingDirectory)'
-        ArtifactName: 'MultitenancyServer.EntityFrameworkCore'
-        publishLocation: 'Container'
+        targetPath: '$(Pipeline.Workspace)'
+        artifact: 'MultitenancyServer.EntityFrameworkCore'
 
 - stage: Prerelease
   jobs:
@@ -67,6 +66,6 @@ stages:
           - task: DotNetCoreCLI@2
             inputs:
               command: 'push'
-              packagesToPush: '$(Build.ArtifactStagingDirectory)/pre/*.nupkg'
+              packagesToPush: '$(Build.ArtifactStagingDirectory)/MultitenancyServer.EntityFrameworkCore/pre/*.nupkg'
               nuGetFeedType: 'internal'
               publishVstsFeed: '8ed18c8e-4f19-4994-be32-0a1f0893af0f'
