--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -47,7 +47,7 @@ stages:
     - task: PublishPipelineArtifact@1
       displayName: 'Publish artifacts'
       inputs:
-        targetPath: '$(Pipeline.Workspace)'
+        targetPath: '$(build.artifactStagingDirectory)'
         artifact: 'MultitenancyServer.EntityFrameworkCore'
 
 - stage: Prerelease
