--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -66,6 +66,6 @@ stages:
           - task: DotNetCoreCLI@2
             inputs:
               command: 'push'
-              packagesToPush: '$(Build.ArtifactStagingDirectory)/MultitenancyServer.EntityFrameworkCore/pre/*.nupkg'
+              packagesToPush: '$(Pipeline.Workspace)/MultitenancyServer.EntityFrameworkCore/pre/*.nupkg'
               nuGetFeedType: 'internal'
               publishVstsFeed: '8ed18c8e-4f19-4994-be32-0a1f0893af0f'
