--- a/src/EFCore/MultiTenancyServer.EntityFrameworkCore.csproj
+++ b/src/EFCore/MultiTenancyServer.EntityFrameworkCore.csproj
@@ -10,8 +10,8 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="2.2.0" />
-		<PackageReference Include="Mms.MultiTenancyServer" Version="1.2.2-pre-20190923.1" />
-		<PackageReference Include="Mms.MultiTenancyServer.Stores" Version="1.2.2-pre-20190923.1" />
+		<PackageReference Include="Mms.MultiTenancyServer" Version="1.4.0-*" />
+		<PackageReference Include="Mms.MultiTenancyServer.Stores" Version="1.4.0-*" />
 	</ItemGroup>
 
 </Project>
