--- a/src/EFCore/MultiTenancyServer.EntityFrameworkCore.csproj
+++ b/src/EFCore/MultiTenancyServer.EntityFrameworkCore.csproj
@@ -1,5 +1,4 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
 	<PropertyGroup>
 		<TargetFramework>netstandard2.0</TargetFramework>
 		<PackageId>Mms.MultiTenancyServer.EntityFrameworkCore</PackageId>
@@ -10,8 +9,6 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="2.2.0" />
-		<PackageReference Include="Mms.MultiTenancyServer" Version="1.4.0-pre-*" />
-		<PackageReference Include="Mms.MultiTenancyServer.Stores" Version="1.4.0-pre-*" />
+		<PackageReference Include="Mms.MultiTenancyServer.Stores" Version="1.4.0" />
 	</ItemGroup>
-
 </Project>
