--- a/src/EFCore/MultiTenancyServer.EntityFrameworkCore.csproj
+++ b/src/EFCore/MultiTenancyServer.EntityFrameworkCore.csproj
@@ -1,16 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>netstandard2.0</TargetFramework>
-		<Version>1.2.0</Version>
+		<TargetFramework>netstandard2.1</TargetFramework>
 		<Description>MultiTenancyServer Entity Framework Core library.</Description>
 		<PackageTags>multitenancy multi-tenancy multitenant multi-tenant tenants tenant company client customer division partition entityframeworkcore entityframework core ef efcore</PackageTags>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="2.2.0" />
-		<PackageReference Include="MultiTenancyServer" Version="1.2.0" />
-		<PackageReference Include="MultiTenancyServer.Stores" Version="1.2.0" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="3.0.0" />
+		<PackageReference Include="MultiTenancyServer" Version="2.0.0-alpha1" />
+		<PackageReference Include="MultiTenancyServer.Stores" Version="2.0.0-alpha1" />
 	</ItemGroup>
 
 </Project>
