--- a/src/EFCore/MultiTenancyServer.EntityFrameworkCore.csproj
+++ b/src/EFCore/MultiTenancyServer.EntityFrameworkCore.csproj
@@ -8,8 +8,8 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="3.0.0" />
-		<PackageReference Include="MultiTenancyServer" Version="2.0.0-alpha1" />
-		<PackageReference Include="MultiTenancyServer.Stores" Version="2.0.0-alpha1" />
+		<PackageReference Include="MultiTenancyServer" Version="2.0.0-beta1" />
+		<PackageReference Include="MultiTenancyServer.Stores" Version="2.0.0-beta1" />
 	</ItemGroup>
 
 </Project>
